syntax = "proto3";
package virtengine.bme.v1;

import "virtengine/bme/v1/params.proto";
import "virtengine/bme/v1/types.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/bme/v1";

// GenesisLedgerRecord
message GenesisLedgerRecord {
  LedgerRecordID id = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag) = "id",
    (gogoproto.moretags) = "yaml:\"id\""
  ];

  LedgerRecord record = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "record",
    (gogoproto.moretags) = "yaml:\"record\""
  ];
}

// GenesisLedgerPendingRecord
message GenesisLedgerPendingRecord {
  LedgerRecordID id = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag) = "id",
    (gogoproto.moretags) = "yaml:\"id\""
  ];

  LedgerPendingRecord record = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "record",
    (gogoproto.moretags) = "yaml:\"record\""
  ];
}

// GenesisLedgerState
message GenesisLedgerState {
  repeated GenesisLedgerRecord records = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "records",
    (gogoproto.moretags) = "yaml:\"records\""
  ];

  repeated GenesisLedgerPendingRecord pending_records = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "pending_records",
    (gogoproto.moretags) = "yaml:\"pending_records\""
  ];
}

// GenesisVaultState
message GenesisVaultState {
  // burned is the cumulative burn for tracked tokens
  repeated cosmos.base.v1beta1.Coin total_burned = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];

  // minted is the cumulative mint back for tracked tokens
  repeated cosmos.base.v1beta1.Coin total_minted = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];

  // remint_credits tracks available credits for reminting tokens
  // (e.g., from previous burns that can be reminted without additional collateral)
  repeated cosmos.base.v1beta1.Coin remint_credits = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// GenesisState defines the BME module's genesis state
message GenesisState {
  // params defines the module parameters
  Params params = 1 [
    (gogoproto.nullable) = false
  ];

  // state is the initial vault state
  GenesisVaultState state = 2 [
    (gogoproto.nullable) = false
  ];

  GenesisLedgerState ledger = 3 [
    (gogoproto.nullable) = true,
    (gogoproto.jsontag) = "ledger,omitempty",
    (gogoproto.moretags) = "yaml:\"ledger,omitempty\""
  ];
}
